# catpath

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
data/: Pd_cod_9008478.cif  README.md  ethanol.sdf
docs/: CONFIG.md  GALLERY.md  USAGE.md
examples/: README.md  auto_ammonia.yaml  multi_substrate.yaml  no_reduction_only.yaml  no_to_nh3_pd.yaml  no_to_nh3_pd_multimodel.yaml  no_to_no3_pd.yaml  render_povray.yaml
src/atosim/: __init__.py  calculators.py  cli.py  config.py  explore.py  graph.py  multi.py  neb.py  network.py  pipeline.py  provenance.py  relax.py  render.py  structures.py  uncertainty.py  viz.py
src/catpath/: __init__.py  calculators.py  cli.py  explore.py  multi.py  neb.py  network.py  pipeline.py  provenance.py  structures.py  sweep.py  validate.py  viz.py
src/catpath/precis/: __init__.py  analysis.py  handler.py  ingest.py  job.py  persist.py  runner.py  text_views.py  toon_views.py
src/catpath/precis/migrations/: 0001_pathway_kind.sql  __init__.py
src/catpath/precis/skills/: __init__.py  precis-pathway-help.md
tests/: test_calculators.py  test_cli.py  test_compare.py  test_config.py  test_explore.py  test_multi.py  test_multimodel.py  test_neb.py  test_network.py  test_pipeline.py  test_precis_bridge.py  test_precis_runner_slab.py  test_render.py  test_structures.py  test_sweep.py  test_uncertainty_graph.py  test_validate.py  test_viz.py
workflow/: Snakefile  config.yaml
