[project]
name = "atosim"
version = "0.1.0"
description = "Reproducible ML-potential reaction pathway explorer (first target: NO -> NO3 on Pd)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reto Stamm" }]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "ase>=3.26",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "rdkit>=2024.3",
]

[project.optional-dependencies]
# Production ML potentials (heavy; GPU). Install on the GB10 box when needed.
mace = ["torch", "mace-torch"]
orchestration = ["snakemake>=8"]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[project.scripts]
atosim = "atosim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atosim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:ase.*",
    "ignore::UserWarning:ase.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
