[project]
name = "catpath"
version = "0.1.0"
description = "Reaction-pathway explorer for catalyst surfaces with ML interatomic potentials: reaction networks, NEB barriers, and cross-model uncertainty."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = [
    "catalysis", "reaction-network", "machine-learning-potential", "MLIP",
    "NEB", "transition-state", "adsorption", "surface-chemistry", "ASE",
    "computational-chemistry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "ase>=3.26",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "rdkit>=2024.3",
]

[project.optional-dependencies]
# Production ML potentials (heavy; GPU). Install on the GB10 box when needed.
# nvrtc>=12.9 is required for the GB10/Blackwell sm_121 JIT (torch's cu128 wheel
# ships nvrtc 12.8, which rejects sm_121). See docs/USAGE.md.
# nvidia-cuda-nvrtc-cu12>=12.9 is the GB10/Blackwell sm_121 fix for the torch
# backends (the cu128 wheel bundles 12.8, which rejects sm_121 at JIT time).
mace = ["torch", "mace-torch", "nvidia-cuda-nvrtc-cu12>=12.9"]
chgnet = ["torch", "chgnet", "nvidia-cuda-nvrtc-cu12>=12.9"]
fairchem = ["torch", "fairchem-core", "nvidia-cuda-nvrtc-cu12>=12.9"]  # UMA weights HF-gated
grace = ["tensorpotential"]                    # TensorFlow-based
orchestration = ["snakemake>=8"]
dev = ["pytest>=8", "pytest-cov", "ruff"]

# These ML backends have incompatible transitive pins (e.g. mace-torch needs
# e3nn==0.4.4 while fairchem-core needs e3nn>=0.5), so they cannot share one
# environment.  Declaring them as conflicting lets uv resolve each in its own
# fork; install exactly ONE per env (or use `backend: auto` with whatever's there).
[tool.uv]
conflicts = [[{ extra = "mace" }, { extra = "chgnet" },
              { extra = "fairchem" }, { extra = "grace" }]]

[project.urls]
Homepage = "https://github.com/retospect/catpath"
Repository = "https://github.com/retospect/catpath"
Issues = "https://github.com/retospect/catpath/issues"

[project.scripts]
catpath = "catpath.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:ase.*",
    "ignore::UserWarning:ase.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
